# DATA_DETECTOR

./: CMakeLists.txt  README.md  a.out  main.cpp  my_program  toolchain-mingw.cmake
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Detector.h  Event.h  Hook.h  LockSet.h  Platform.h  ShadowMemory.h  VectorClock.h
samples/: force_race.cpp  race_example.cpp  sample_race.cpp
src/: Detector.cpp  Hook.cpp  LockSet.cpp  ShadowMemory.cpp  VectorClock.cpp
